// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `
<div class="win-collapse">
  <div class="win-collapse-item">
    <div role="button" tabindex="0" aria-expanded="false" class="win-cell win-cell--clickable win-collapse-item__title">
      <div class="win-cell__title"><span>a</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="win-collapse-item win-collapse-item--border">
    <div role="button" tabindex="0" aria-expanded="false" class="win-cell win-cell--clickable win-collapse-item__title">
      <div class="win-cell__title"><span>b</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="win-collapse-item win-collapse-item--border">
    <div role="button" tabindex="0" aria-expanded="false" class="win-cell win-cell--clickable win-collapse-item__title">
      <div class="win-cell__title"><span>c</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
        <!----></i>
    </div>
  </div>
</div>
`;

exports[`lazy render collapse content 1`] = `
<div class="win-collapse win-hairline--top-bottom">
  <div class="win-collapse-item" style="padding: 0px;">
    <div role="button" tabindex="0" aria-expanded="false" class="win-cell win-cell--clickable win-collapse-item__title">
      <div class="win-cell__title"><span>a</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="win-collapse-item win-collapse-item--border" style="padding: 0px;">
    <div role="button" tabindex="0" aria-expanded="true" class="win-cell win-cell--clickable win-collapse-item__title win-collapse-item__title--expanded">
      <div class="win-cell__title"><span>b</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
        <!----></i>
    </div>
    <div class="win-collapse-item__wrapper">
      <div class="win-collapse-item__content">content</div>
    </div>
  </div>
</div>
`;

exports[`render collapse-item slot 1`] = `
<div class="win-collapse win-hairline--top-bottom">
  <div class="win-collapse-item">
    <div role="button" tabindex="0" aria-expanded="false" class="win-cell win-cell--clickable win-collapse-item__title">this is icon<div class="win-cell__title">this is title</div>
      <div class="win-cell__value">this is value</div>this is right icon
    </div>
  </div>
</div>
`;
